--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,43 @@
 @import "tailwindcss";
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
+:root {
+  margin: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  max-width: 100% !important;
+  overflow-x: hidden; /* prevents sideways scroll */
+  box-sizing: border-box;
+}
 
 #root {
-  max-width: 420px;
-  margin: 0 auto;
-  padding: 0rem;
-  text-align: center;
+  :root {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    max-width: 100% !important;
+    overflow-x: hidden; /* prevents sideways scroll */
+
+    box-sizing: border-box;
+  }
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
